@@ -168,6 +168,8 @@ preference_production_title=Production table columns
 preference_production_title_tt=This allows you to enable some additional columns in the production table
 preference_production_done_column=Mark recipe as done
 preference_production_done_column_tt=Adds a column with a button that allows you to mark a recipe as done, which serves as purely visual information for you and has no effect on the recipe itself
+preference_production_percentage_column=Percentage
+preference_production_percentage_column_tt=Adds a column with a textfield that allows you to specify the percentage of the demand for the recipe's products to be fulfilled
 preference_production_pollution_column=Pollution
 preference_production_pollution_column_tt=Adds a column displaying the pollution produced by this recipe
 preference_production_line_comment_column=Recipe comments
